# IMPOSSIBLE

./: Cargo.toml  README.md
src/: crack_hash.rs  helpers.rs  main.rs
