[package]
name = "project-impossible"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
md5 = "0.8.0"
sha1 = "0.10.5"
zxcvbn = "3.1.0"
rayon = "1.10.1"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.0", features = ["derive"] }
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"